@@ -1,3 +1,76 @@
-<window id="151">
-<!--removed-->
+<?xml version="1.0" encoding="UTF-8"?>
+<window>
+
+	<controls>
+	
+		<control type="group">
+													
+			<posx>col-19-begin</posx>
+			<posy>83</posy>
+			
+			<!--animations-->
+			<animation type="Windowclose">
+				<effect type="fade" start="100" end="0" time="400" tween="sine" />
+			</animation>
+			
+			<control type="image">
+				<posx>0</posx>
+				<posy>-12</posy>
+				<width>8-col</width>
+				<height>102</height>
+				<texture>colors/selected.png</texture>
+				<colordiffuse>eeFFFFFF</colordiffuse>
+				<!--animations-->
+				<animation type="Windowopen">
+					<effect type="slide" start="1000,0" end="0,0" time="400" tween="sine" />
+				</animation>
+			</control>
+
+			<control type="label">
+				<description>heading</description>
+				<posx>24</posx>
+				<posy>-12</posy>
+				<font>smallStrong</font>
+				<width>468</width>
+				<height>1-row</height>
+				<label>$INFO[Control.GetLabel(30)] $INFO[System.Progressbar,- ,%]</label>
+				<scroll>true</scroll>
+				<textcolor>black</textcolor>
+				<shadowcolor>-</shadowcolor>
+				<!--animations-->
+				<animation type="Windowopen">
+					<effect type="fade" start="0" end="100" delay="400" time="400" tween="sine" />
+				</animation>
+			</control>
+
+			<control type="label" id="31">
+				<description>message</description>
+				<posx>24</posx>
+				<posy>30</posy>
+				<font>pageTitle</font>
+				<textcolor>black</textcolor>
+				<width>468</width>
+				<height>1-row</height>
+				<label>-</label>
+				<scroll>true</scroll>
+				<shadowcolor>-</shadowcolor>
+				<!--animations-->
+				<animation type="Windowopen">
+					<effect type="fade" start="0" end="100" delay="600" time="400" tween="sine" />
+				</animation>
+			</control>
+						
+		</control>
+		
+		<!--hidden labels-->
+		<control type="group">
+			<visible>false</visible>
+			
+			<control type="label" id="30">
+				<description>heading label</description>
+			</control>
+
+		</control>
+		
+	</controls>
 </window>
