@@ -47,6 +47,9 @@
 	<variable name="listTitle">	
 		<value condition="Window.IsActive(videolibrary) + SubString(skin.string(showRecentVideoItems),true)">$LOCALIZE[31012]</value>
 		<value condition="Window.IsActive(musiclibrary) + SubString(skin.string(showRecentMusicItems),true)">$LOCALIZE[31053]</value>
+		<value condition="Window.IsActive(musicfiles) + SubString(container.foldername,add-ons)">$LOCALIZE[31058]</value>
+		<value condition="Window.IsActive(musicfiles) + SubString(container.foldername,playlists)">$LOCALIZE[20011]</value>
+		<value condition="Window.IsActive(musicfiles) + !Substring(Container.folderpath,plugin)">$LOCALIZE[30214]</value>
 		<value condition="Substring(Container.folderpath,plugin)">$INFO[container.foldername]</value>
 		<value condition="Container.Content(movies)">$LOCALIZE[20342] [COLOR accented]$LOCALIZE[31054] $INFO[container.sortmethod][/COLOR]</value>
 		<value condition="Container.Content(livetv)">31006</value>
