@@ -1,3 +1,6 @@
-﻿<window id="120">
-	<!--removed-->
+﻿<window>
+	<onload>action(back)</onload>
+	<controls>
+		<!--not used-->		
+	</controls>
 </window>
