@@ -5,104 +5,107 @@
 
 	<controls>
 		
-		<!--fanart-->
-		<control type="image">
-			<visible>isempty(Window(Visualisation).Property(ArtistSlideshow))</visible>
-			<posx>0</posx>
-			<posy>0</posy>
-			<include>dimensionsFullscreen</include>
-			<fadetime>200</fadetime>
-			<texture background="true">$INFO[MusicPlayer.Property(Fanart_Image)]</texture>
-			<aspectratio  align="left" aligny="top">stretch</aspectratio>
-			<include>kenBurnsey</include>
+		<control type="group">
+			
+			<!--fanart-->
+			<control type="image">
+				<visible>isempty(Window(Visualisation).Property(ArtistSlideshow))</visible>
+				<posx>0</posx>
+				<posy>0</posy>
+				<include>dimensionsFullscreen</include>
+				<fadetime>200</fadetime>
+				<texture background="true">$INFO[MusicPlayer.Property(Fanart_Image)]</texture>
+				<aspectratio  align="left" aligny="top">stretch</aspectratio>
+				<include>kenBurnsey</include>
+			</control>
+	
+			<control type="multiimage">
+				<visible>!isempty(Window(Visualisation).Property(ArtistSlideshow))</visible>
+			    <posx>0</posx>
+			    <posy>0</posy>
+			    <include>dimensionsFullscreen</include>
+			    <imagepath background="true">$INFO[Window(Visualisation).Property(ArtistSlideshow)]</imagepath>
+			    <aspectratio>keep</aspectratio>
+			    <timeperimage>10000</timeperimage>
+			    <fadetime>1000</fadetime>
+			    <randomize>true</randomize>
+				<include>kenBurnsey</include>
+			</control>
+		
+			<!--vignettes-->
+			<control type="image">
+				<posx>0</posx>
+				<posy>0</posy>
+				<include>dimensionsFullscreen</include>
+				<texture>masks/videoGrid.png</texture>
+				<colordiffuse>ffffffff</colordiffuse>
+				<aspectratio>stretch</aspectratio>
+			</control>
+		
+			<control type="image">
+				<posx>0</posx>
+				<posy>0</posy>
+				<include>dimensionsFullscreen</include>
+				<texture>vignette.png</texture>
+				<colordiffuse>ffffffff</colordiffuse>
+				<aspectratio>stretch</aspectratio>
+			</control>
+		
+			<control type="group">
+				<posx>col-1-begin</posx>
+				<posy>row-12-begin</posy>
+			
+				<control type="image">
+					<description>Music cover image</description>
+					<posx>0</posx>
+					<posy>8</posy>
+					<width>4-col-gutter</width>
+					<height>4-col-gutter</height>
+					<fadetime>200</fadetime>
+					<texture background="true">$INFO[MusicPlayer.cover]</texture>
+					<aspectratio  align="left" aligny="top">stretch</aspectratio>
+				</control>
+
+				<control type="label">
+					<posx>4-col</posx>
+					<posy>48</posy>
+					<width>8-col-gutter</width>
+					<label>$INFO[MusicPlayer.TrackNumber,,.] $INFO[MusicPlayer.Title]</label>
+					<scroll>true</scroll>
+					<align>left</align>
+					<font>pageTitle</font>
+				</control>
+			
+				<control type="label">
+					<posx>4-col</posx>
+					<posy>92</posy>
+					<width>8-col-gutter</width>
+					<label>$INFO[MusicPlayer.Artist]</label>
+					<align>left</align>
+					<font>itemTitle</font>
+				</control>
+			
+				<control type="label">
+					<posx>4-col</posx>
+					<posy>136</posy>
+					<width>8-col-gutter</width>
+					<label>$INFO[MusicPlayer.Album] $INFO[MusicPlayer.year,(,)]</label>
+					<align>left</align>
+					<font>itemTitle</font>
+				</control>
+			
+				<control type="label">
+					<description>Player Times + Next up</description>
+					<posx>4-col</posx>
+					<posy>184</posy>
+					<width>8-col</width>
+					<label>[B]$INFO[MusicPlayer.Time][/B] / [B]$INFO[MusicPlayer.Duration][/B]  [B]$LOCALIZE[19031][/B] $INFO[MusicPlayer.offset(1).Artist] : $INFO[MusicPlayer.offset(1).Title]</label>
+					<font>smallMedium</font>
+				</control>			
+
+			</control>
 		</control>
 	
-		<control type="multiimage">
-			<visible>!isempty(Window(Visualisation).Property(ArtistSlideshow))</visible>
-		    <posx>0</posx>
-		    <posy>0</posy>
-		    <include>dimensionsFullscreen</include>
-		    <imagepath background="true">$INFO[Window(Visualisation).Property(ArtistSlideshow)]</imagepath>
-		    <aspectratio>keep</aspectratio>
-		    <timeperimage>10000</timeperimage>
-		    <fadetime>1000</fadetime>
-		    <randomize>true</randomize>
-			<include>kenBurnsey</include>
-		</control>
-		
-		<!--vignettes-->
-		<control type="image">
-			<posx>0</posx>
-			<posy>0</posy>
-			<include>dimensionsFullscreen</include>
-			<texture>masks/videoGrid.png</texture>
-			<colordiffuse>ffffffff</colordiffuse>
-			<aspectratio>stretch</aspectratio>
-		</control>
-		
-		<control type="image">
-			<posx>0</posx>
-			<posy>0</posy>
-			<include>dimensionsFullscreen</include>
-			<texture>vignette.png</texture>
-			<colordiffuse>ffffffff</colordiffuse>
-			<aspectratio>stretch</aspectratio>
-		</control>
-		
-		<control type="group">
-			<posx>col-1-begin</posx>
-			<posy>row-12-begin</posy>
-			
-			<control type="image">
-				<description>Music cover image</description>
-				<posx>0</posx>
-				<posy>8</posy>
-				<width>4-col-gutter</width>
-				<height>4-col-gutter</height>
-				<fadetime>200</fadetime>
-				<texture background="true">$INFO[MusicPlayer.cover]</texture>
-				<aspectratio  align="left" aligny="top">stretch</aspectratio>
-			</control>
-
-			<control type="label">
-				<posx>4-col</posx>
-				<posy>48</posy>
-				<width>8-col-gutter</width>
-				<label>$INFO[MusicPlayer.TrackNumber,,.] $INFO[MusicPlayer.Title]</label>
-				<scroll>true</scroll>
-				<align>left</align>
-				<font>pageTitle</font>
-			</control>
-			
-			<control type="label">
-				<posx>4-col</posx>
-				<posy>92</posy>
-				<width>8-col-gutter</width>
-				<label>$INFO[MusicPlayer.Artist]</label>
-				<align>left</align>
-				<font>itemTitle</font>
-			</control>
-			
-			<control type="label">
-				<posx>4-col</posx>
-				<posy>136</posy>
-				<width>8-col-gutter</width>
-				<label>$INFO[MusicPlayer.Album] $INFO[MusicPlayer.year,(,)]</label>
-				<align>left</align>
-				<font>itemTitle</font>
-			</control>
-			
-			<control type="label">
-				<description>Player Times</description>
-				<posx>4-col</posx>
-				<posy>184</posy>
-				<width>8-col</width>
-				<label>[B]$INFO[MusicPlayer.Time][/B] / [B]$INFO[MusicPlayer.Duration][/B]</label>
-				<font>smallMedium</font>
-			</control>			
-
-		</control>
-
 		<!--debugging-->
 		<include>Debug_Grid</include>
 		<control type="label">
