@@ -376,7 +376,7 @@
 
 						<!--no recent items-->
 						<control type="label">
-							<visible>isEmpty(Window(Home).Property(LatestMovie.1.Title)) + isEmpty(Window(Home).Property(LatestEpisode.1.Title))</visible>
+							<visible>isEmpty(Window(Home).Property(RecentMovie.1.Title)) + isEmpty(Window(Home).Property(RecentEpisode.1.Title))</visible>
 							<posx>1-col</posx>
 							<posy>4-row</posy>
 							<width>21-col</width>
@@ -388,7 +388,7 @@
 
 						<!--content-->        
 						<control type="panel" id="9998">
-							<visible>!isEmpty(Window(Home).Property(LatestMovie.1.Title)) + IntegerGreaterThan(container.Numitems,0)</visible>
+							<visible>!isEmpty(Window(Home).Property(RecentMovie.1.Title)) + IntegerGreaterThan(container.Numitems,0)</visible>
 							<posx>-12</posx>
 							<posy>-12</posy>
 							<width>22-col</width>
@@ -446,7 +446,7 @@
 										<posx>12</posx>
 										<posy>-8</posy>
 										<width>339</width>
-										<font>itemTitleSmall</font>
+										<font>itemTitleSmallCondensed</font>
 										<textcolor>selected</textcolor>
 										<label>$INFO[ListItem.Label]</label>
 									</control>
@@ -505,7 +505,7 @@
 										<posx>12</posx>
 										<posy>-8</posy>
 										<width>339</width>
-										<font>itemTitleSmall</font>
+										<font>itemTitleSmallCondensed</font>
 										<textcolor>black</textcolor>
 										<shadowcolor>-</shadowcolor>
 										<label>$INFO[ListItem.Label]</label>
