@@ -217,7 +217,7 @@
 				<posx>-12</posx>
 				<posy>4</posy>
 				<width>21-col</width>
-				<height>696</height>
+				<height>706</height>
 				<onleft>9000</onleft>
 				<onright>60</onright>
 				<ondown>53</ondown>
@@ -226,7 +226,7 @@
 				<preloaditems>2</preloaditems>
 				<scrolltime tween="sine" easing="inout">200</scrolltime>
 
-				<itemlayout width="300" height="354">								
+				<itemlayout width="300" height="366">								
 
 					<control type="image">
 						<posx>0</posx>
@@ -268,7 +268,7 @@
 							<posx>12</posx>
 							<posy>-8</posy>
 							<width>252</width>
-							<font>itemTitleSmall</font>
+							<font>itemTitleSmallCondensed</font>
 							<textcolor>selected</textcolor>
 							<label>$INFO[ListItem.Label]</label>
 						</control>
@@ -296,7 +296,7 @@
 
 				</itemlayout>
 
-				<focusedlayout width="300" height="354">
+				<focusedlayout width="300" height="366">
 
 					<control type="image">
 						<posx>0</posx>
@@ -339,7 +339,7 @@
 							<posx>12</posx>
 							<posy>-8</posy>
 							<width>252</width>
-							<font>itemTitleSmall</font>
+							<font>itemTitleSmallCondensed</font>
 							<textcolor>black</textcolor>
 							<shadowcolor>-</shadowcolor>
 							<label>$INFO[ListItem.Label]</label>
