@@ -19,7 +19,7 @@
 				<posx>-12</posx>
 				<posy>4</posy>
 				<width>21-col</width>
-				<height>696</height>
+				<height>715</height>
 				<onleft>9000</onleft>
 				<onright>60</onright>
 				<ondown>53</ondown>
@@ -28,8 +28,8 @@
 				<preloaditems>2</preloaditems>
 				<scrolltime tween="sine" easing="inout">200</scrolltime>
 												
-				<itemlayout width="300" height="354">								
-									
+				<itemlayout width="300" height="366">								
+														
 					<control type="image">
 						<posx>0</posx>
 						<posy>0</posy>
@@ -88,7 +88,7 @@
 																				
 				</itemlayout>
 
-				<focusedlayout width="300" height="354">
+				<focusedlayout width="300" height="366">
 																		
 					<control type="image">
 						<posx>0</posx>
