@@ -1,86 +1,8 @@
 <window id="122">
-	<defaultcontrol always="true">2</defaultcontrol>
-	<allowoverlay>yes</allowoverlay>
+	<onload>action(back)</onload>
 
 	<controls>
-
-		<control type="group">
-			<posx>510</posx>
-			<posy>300</posy>
-
-			<control type="image">
-				<posx>-30</posx>
-				<posy>-30</posy>
-				<width>960</width>
-				<height>744</height>
-				<texture border="22">colors/black.png</texture>
-			</control>
-
-			<control type="label">
-				<posy>-60</posy>
-				<include>DialogID</include>
-				<label>VisualisationPresetList.xml</label>
-			</control>
-
-			<control type="label">
-				<description>Header Label</description>
-				<posx>15</posx>
-				<width>840</width>
-				<label>31032</label>
-				<font>regular</font>
-				<shadowcolor>black</shadowcolor>
-				<align>center</align>
-			</control>
-
-			<control type="list" id="2">
-				<description>Preset List</description>
-				<posx>15</posx>
-				<posy>87</posy>
-				<width>870</width>
-				<height>552</height>
-				<onleft>-</onleft>
-				<onright>-</onright>
-				<onup>2</onup>
-				<ondown>2</ondown>
-
-				<itemlayout height="69">
-
-					<control type="image">
-						<width>870</width>
-						<height>66</height>
-						<texture border="2">colors/black.png</texture>
-					</control>
-
-					<control type="label">
-						<posx>30</posx>
-						<width>810</width>
-						<info>ListItem.Label</info>
-					</control>
-
-				</itemlayout>
-
-				<focusedlayout height="69">
-
-					<control type="image">
-						<width>870</width>
-						<height>66</height>
-						<texture border="5">colors/selected.png</texture>
-					</control>
-
-					<control type="label">
-						<posx>30</posx>
-						<width>810</width>
-						<info>ListItem.Label</info>
-					</control>
-
-				</focusedlayout>
-
-			</control>
-
-		</control>
-
-		<include>Debug_Grid</include>
-
+		<!--removed: not used-->
 	</controls>
 
 </window>
