@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<addon id="skin.maximinimalism" version="0.9.1" name="Maximinimalism" provider-name="theDeadman">
+<addon id="skin.maximinimalism" version="1.0.0" name="Maximinimalism" provider-name="theDeadman">
 	<requires>
 		<import addon="xbmc.gui" version="4.0.0"/>
 		<import addon="service.skin.widgets" version="0.0.2"/>
