@@ -110,7 +110,7 @@
 	<string id="31055">Addons</string>
 	<string id="31056">Photo Library</string>
 	<string id="31057">Create Music Playlist</string>
-	
+	<string id="31058">Music Addons</string>
 	<string id="31059">Build</string>
 	<string id="31060">PVR</string>
 	<string id="31061">Skin</string>
